syntax = "proto3";
option go_package = ".;rpc";
message Empty {

}

message HelloResponse {
    string hello = 1;
}

message LoginRequest {
    string name = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}
message DoingResponse {
    string name = 1;
}
service Account {
    rpc Doing(Empty) returns(DoingResponse);
}

service Server {
    rpc Hello(Empty) returns(HelloResponse);
    rpc Login(LoginRequest) returns(LoginResponse);
}